@@ -4,22 +4,22 @@
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta name="GENERATOR" content="Mozilla/4.61 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
    <meta name="Author" content="Bob Friesenhahn">
-   <meta name="Description" content="Documentation for enumerations used by Magick++.">
-   <title>Magick++ Enumerations</title>
+   <meta name="Description" content="Documentation for enumerations.">
+   <title>Enumerations</title>
 </head>
 <body text="#000000" bgcolor="#FFFFFF" link="#0000EE" vlink="#551A8B" alink="#FF0000">
 
 <center>
 <h1>
-Magick++ Enumerations</h1></center>
+Enumerations</h1></center>
 
 <center>
 <h3>
-<a NAME="ClassType"></a>Magick::ClassType</h3></center>
+<a NAME="ClassType"></a>ClassType</h3></center>
 <i>ClassType</i> specifies the image storage class.
 <table BORDER WIDTH="100%" NOSAVE >
 <caption>
-<center><b>Magick::ClassType</b></center>
+<center><b>ClassType</b></center>
 </caption>
 
 <tr>
@@ -53,7 +53,7 @@ Magick++ Enumerations</h1></center>
 
 <center>
 <h3>
-<a NAME="ColorspaceType"></a>Magick::ColorspaceType</h3></center>
+<a NAME="ColorspaceType"></a>ColorspaceType</h3></center>
 The ColorspaceType enumeration is used to specify the colorspace that quantization
 (color reduction and mapping) is done under or to specify the colorspace
 when encoding an output image. Colorspaces are ways of describing colors
@@ -72,7 +72,7 @@ is only applicable when writing TIFF, JPEG, and Adobe Photoshop bitmap
 (PSD) files.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::ColorspaceType</b></caption>
+<caption><b>ColorspaceType</b></caption>
 
 <tr>
 <td>
@@ -169,14 +169,14 @@ or emulsion, normally on a white surface.</td>
 
 <center>
 <h3>
-<a NAME="CompositeOperator"></a><b>Magick::CompositeOperator</b></h3></center>
+<a NAME="CompositeOperator"></a><b>CompositeOperator</b></h3></center>
 <i>CompositeOperator</i> is used to select the image composition algorithm
 used to compose a <i>composite image</i> with an <i>image</i>. By default,
 each of the composite image pixels are replaced by the corresponding image
 tile pixel. Specify <i>CompositeOperator</i> to select a different algorithm.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::CompositeOperator</b></caption>
+<caption><b>CompositeOperator</b></caption>
 
 <tr>
 <td>
@@ -323,7 +323,7 @@ must be 0).</td>
 
 <center>
 <h3>
-<a NAME="CompressionType"></a><b>Magick::CompressionType</b></h3></center>
+<a NAME="CompressionType"></a><b>CompressionType</b></h3></center>
 <i>CompressionType</i> is used to express the desired compression type
 when encoding an image. Be aware that most image types only support a sub-set
 of the available compression types. If the compression type specified is
@@ -331,7 +331,7 @@ incompatable with the image, ImageMagick selects a compression type compatable
 with the image type.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::CompressionType</b></caption>
+<caption><b>CompressionType</b></caption>
 
 <tr>
 <td>
@@ -402,7 +402,7 @@ and Huffman coding)&nbsp; as used by bzip2 utilities</td>
 <br>&nbsp;
 <center>
 <h3>
-<a NAME="FilterType"></a><b>Magick::FilterType</b></h3></center>
+<a NAME="FilterType"></a><b>FilterType</b></h3></center>
 <i>FilterType</i> is used to adjust the filter algorithm used when resizing
 images. Different filters experience varying degrees of success with various
 images and can take sigificantly different amounts of processing time.
@@ -414,7 +414,7 @@ diagonal lines. The only way to be sure is to test the filter with sample
 images.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::FilterType</b></caption>
+<caption><b>FilterType</b></caption>
 
 <tr>
 <td>
@@ -525,7 +525,7 @@ images.
 
 <center>
 <h3>
-<a NAME="GravityType"></a><b>Magick::GravityType</b></h3></center>
+<a NAME="GravityType"></a><b>GravityType</b></h3></center>
 Gravity specifies positioning of an object (e.g. text, image) within a
 bounding region (e.g. an image). Gravity provides a convenient way to locate
 objects irrespective of the size of the bounding region, in other words,
@@ -534,7 +534,7 @@ object. A common default for gravity is <i>NorthWestGravity</i>.
 <br>&nbsp;
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::GravityType</b></caption>
+<caption><b>GravityType</b></caption>
 
 <tr>
 <td>
@@ -609,11 +609,11 @@ object. A common default for gravity is <i>NorthWestGravity</i>.
 
 <center>
 <h3>
-<a NAME="ImageType"></a><b>Magick::ImageType</b></h3></center>
+<a NAME="ImageType"></a><b>ImageType</b></h3></center>
 The ImageType enumeration indicates the type classification of the image.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::ImageType</b></caption>
+<caption><b>ImageType</b></caption>
 
 <tr>
 <td>
@@ -650,6 +650,12 @@ The ImageType enumeration indicates the type classification of the image.
 </tr>
 
 <tr>
+<td>PaletteMatteType</td>
+
+<td>Indexed color (palette) with opacity image</td>
+</tr>
+
+<tr>
 <td>TrueColorType</td>
 
 <td>Truecolor image</td>
@@ -670,7 +676,7 @@ The ImageType enumeration indicates the type classification of the image.
 
 <center>
 <h3>
-<a NAME="InterlaceType"></a><b>Magick::InterlaceType</b></h3></center>
+<a NAME="InterlaceType"></a><b>InterlaceType</b></h3></center>
 <i>InterlaceType</i> specifies the ordering of the red, green, and blue
 pixel information in the image. Interlacing is usually used to make image
 information available to the user faster by taking advantage of the space
@@ -681,7 +687,7 @@ resolution increasing over time.
 GIF or progressive JPEG image.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::InterlaceType</b></caption>
+<caption><b>InterlaceType</b></caption>
 
 <tr>
 <td>
@@ -727,14 +733,14 @@ to individual files (e.g. image.R, image.G, and image.B)</td>
 
 <center>
 <h3>
-<a NAME="LayerType"></a><b>Magick::LayerType</b></h3></center>
+<a NAME="LayerType"></a><b>LayerType</b></h3></center>
 <i>LayerType</i> is used as an argument when doing color separations. Use
 <i>LayerType</i>
 when extracting a layer from an image. <i>MatteLayer</i> is useful for
 extracting the opacity values from an image.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::LayerType</b></caption>
+<caption><b>LayerType</b></caption>
 
 <tr>
 <td>
@@ -779,12 +785,12 @@ extracting the opacity values from an image.
 
 <center>
 <h3>
-<a NAME="NoiseType"></a><b>Magick::NoiseType</b></h3></center>
+<a NAME="NoiseType"></a><b>NoiseType</b></h3></center>
 NoiseType is used as an argument to select the type of noise to be added
 to the image.
 <br>&nbsp;
 <table BORDER COLS=2 WIDTH="100%" NOSAVE >
-<caption><b>Magick::NoiseType</b></caption>
+<caption><b>NoiseType</b></caption>
 
 <tr>
 <td>
@@ -835,12 +841,12 @@ to the image.
 
 <center>
 <h3>
-<a NAME="PaintMethod"></a><b>Magick::PaintMethod</b></h3></center>
+<a NAME="PaintMethod"></a><b>PaintMethod</b></h3></center>
 PaintMethod specifies how pixel colors are to be replaced in the image.
 It is used to select the pixel-filling algorithm employed.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::PaintMethod</b></caption>
+<caption><b>PaintMethod</b></caption>
 
 <tr>
 <td>
@@ -887,7 +893,7 @@ matching border color.</td>
 
 <center>
 <h3>
-<a NAME="RenderingIntent"></a><b>Magick::RenderingIntent</b></h3></center>
+<a NAME="RenderingIntent"></a><b>RenderingIntent</b></h3></center>
 Rendering intent is a concept defined by <a href="http://www.color.org/">ICC</a>
 Spec ICC.1:1998-09, "File Format for Color Profiles". ImageMagick uses
 <i>RenderingIntent</i>
@@ -899,7 +905,7 @@ entire sequence. Typically, the user or application will set the rendering
 intent dynamically at runtime or embedding time."
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
-<caption><b>Magick::RenderingIntent</b></caption>
+<caption><b>RenderingIntent</b></caption>
 
 <tr>
 <td>
@@ -947,13 +953,13 @@ preserved but colorimetric accuracy might not be preserved.</td>
 
 <center>
 <h3>
-<a NAME="ResolutionType"></a><b>Magick::ResolutionType</b></h3></center>
+<a NAME="ResolutionType"></a><b>ResolutionType</b></h3></center>
 By default, ImageMagick defines resolutions in pixels per inch. <i>ResolutionType</i>
 provides a means to adjust this.
 <br>&nbsp;
 <table BORDER WIDTH="100%" NOSAVE >
 <caption>
-<center><b>Magick::ResolutionType</b></center>
+<center><b>ResolutionType</b></center>
 </caption>
 
 <tr>
