@@ -33,6 +33,9 @@
 
 // Needed for time_t
 #include <ctime>
+#if defined(_VISUALC_)
+#include <sys\types.h>
+#endif
 
 namespace MagickLib
 {
@@ -94,6 +97,8 @@ namespace Magick
   using MagickLib::ReplaceGreenCompositeOp;
   using MagickLib::ReplaceBlueCompositeOp;
   using MagickLib::ReplaceMatteCompositeOp;
+  // BlendCompositeOp, DisplaceCompositeOp, AnnotateCompositeOp, and
+  // ModulateCompositeOp are private ImageMagick implementation enums
   
   // Compression algorithms
   using MagickLib::CompressionType;
@@ -125,13 +130,28 @@ namespace Magick
   using MagickLib::LanczosFilter;
   using MagickLib::BesselFilter;
   using MagickLib::SincFilter;
-  
+
+  // Bit gravity
+  using MagickLib::GravityType;
+  using MagickLib::ForgetGravity;
+  using MagickLib::NorthWestGravity;
+  using MagickLib::NorthGravity;
+  using MagickLib::NorthEastGravity;
+  using MagickLib::WestGravity;
+  using MagickLib::CenterGravity;
+  using MagickLib::EastGravity;
+  using MagickLib::SouthWestGravity;
+  using MagickLib::SouthGravity;
+  using MagickLib::SouthEastGravity;
+  using MagickLib::StaticGravity;
+
   // Image types
   using MagickLib::ImageType;
   using MagickLib::UndefinedType;
   using MagickLib::BilevelType;
   using MagickLib::GrayscaleType;
   using MagickLib::PaletteType;
+  using MagickLib::PaletteMatteType;
   using MagickLib::TrueColorType;
   using MagickLib::TrueColorMatteType;
   using MagickLib::ColorSeparationType;
@@ -168,40 +188,6 @@ namespace Magick
   using MagickLib::FloodfillMethod;
   using MagickLib::FillToBorderMethod;
   using MagickLib::ResetMethod;
-
-
-  // Preview types
-  // Not currently actually used by Magick++
-  using MagickLib::UndefinedPreview;
-  using MagickLib::RotatePreview;
-  using MagickLib::ShearPreview;
-  using MagickLib::RollPreview;
-  using MagickLib::HuePreview;
-  using MagickLib::SaturationPreview;
-  using MagickLib::BrightnessPreview;
-  using MagickLib::GammaPreview;
-  using MagickLib::SpiffPreview;
-  using MagickLib::DullPreview;
-  using MagickLib::GrayscalePreview;
-  using MagickLib::QuantizePreview;
-  using MagickLib::DespecklePreview;
-  using MagickLib::ReduceNoisePreview;
-  using MagickLib::AddNoisePreview;
-  using MagickLib::SharpenPreview;
-  using MagickLib::BlurPreview;
-  using MagickLib::ThresholdPreview;
-  using MagickLib::EdgeDetectPreview;
-  using MagickLib::SpreadPreview;
-  using MagickLib::ShadePreview;
-  using MagickLib::RaisePreview;
-  using MagickLib::SegmentPreview;
-  using MagickLib::SolarizePreview;
-  using MagickLib::SwirlPreview;
-  using MagickLib::ImplodePreview;
-  using MagickLib::WavePreview;
-  using MagickLib::OilPaintPreview;
-  using MagickLib::CharcoalDrawingPreview;
-  using MagickLib::JPEGPreview;
   
   // Rendering intents
   using MagickLib::RenderingIntent;
@@ -217,33 +203,7 @@ namespace Magick
   using MagickLib::PixelsPerInchResolution;
   using MagickLib::PixelsPerCentimeterResolution;
 
-  // Bit gravity
-  // The enumeration values are safely defined by the X11 protocol.
-  enum GravityType
-  {
-#undef ForgetGravity
-    ForgetGravity,	//  0
-#undef NorthWestGravity
-    NorthWestGravity,	//  1
-#undef NorthGravity
-    NorthGravity,	//  2
-#undef NorthEastGravity
-    NorthEastGravity,	//  3
-#undef WestGravity
-    WestGravity,	//  4
-#undef CenterGravity
-    CenterGravity,	//  5
-#undef EastGravity
-    EastGravity,	//  6
-#undef SouthWestGravity
-    SouthWestGravity,	//  7
-#undef SouthGravity
-    SouthGravity,	//  8
-#undef SouthEastGravity
-    SouthEastGravity,	//  9
-#undef StaticGravity
-    StaticGravity	// 10
-  };
+
 
 }
 
